# faceapi

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app  app.js  cmake_install.cmake  config.ini  data.sql  log.txt  main.cpp  myApp  nginx.conf  nohup.out  package-lock.json  package.json  start.sh  startApp.sh  testProject  test_search_face.cpp  token.cpp  token.h
api/: CMakeCache.txt  CMakeLists.txt  Makefile  api.cpp  cmake_install.cmake  testProject
base64/: CMakeLists.txt  test.cpp
hash/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  myapp
http/: CMakeCache.txt  CMakeLists.txt  Makefile  MyApp  cmake_install.cmake  test.cpp
log/: CMakeLists.txt  main.cpp
mysql/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp  testProject
